# cook-upload

./: .gitignore  pyproject.toml  ruff.toml
cook_upload/: __init__.py  constants.py  logger.py  main.py  models.py  notion.py  notion_actions.py  openai_actions.py  upload.py
cook_upload/commands/: cmd_upload.py
cook_upload/models/: __init__.py  notion_common_models.py  notion_dbmetdata_model.py  notion_dbnewpage_model.py  notion_dbsearch_model.py  notion_models.py  openai_models.py
tests/: conftest.py  test_cli.py  test_notion_actions.py  test_openai_actions.py
tests/cassettes/: Test_NotionActions.test_add_entry_without_origin.yaml  Test_NotionActions.test_dish_type.yaml  Test_NotionActions.test_get_db_data.yaml  Test_NotionActions.test_is_title_already_used.yaml  Test_NotionActions.test_is_title_used_not_used.yaml  Test_NotionActions.test_query_db_same_title.yaml  Test_NotionActions.test_query_db_title_not_found.yaml  Test_NotionActions.test_query_db_without_title.yaml  Test_OpenAIActions.test_parse_image.yaml  test_app_invoke_should_error_missing_params[no_difficulty].yaml  test_app_invoke_should_error_missing_params[no_source].yaml  test_app_invoke_works[all_params].yaml  test_app_invoke_works[lowercase_diff].yaml  test_app_invoke_works[no_country].yaml  test_app_invoke_works[no_date].yaml  test_app_unexisting_file_should_fail.yaml  test_date_param_is_as_expected[None].yaml  test_date_param_is_as_expected[specific_date].yaml  test_date_param_is_as_expected[today].yaml  test_params_should_error[country].yaml  test_params_should_error[date].yaml  (+4 more)
(+6 files in other folders)
