[project]
name = "cook_upload"
version = "1.0.0"
requires-python = ">=3.13"

dependencies = [
    "requests",
    "pydantic",
]

[build-system]
requires = [
    "setuptools>=65",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-random-order",
    "pytest-vcr",
    "pytest-watch",
    "ruff",
    "wheel==0.37.1",
    "setuptools==61.0.0",
    "typer",
]

