[project]
name = "cook_upload"
version = "1.0.0"
requires-python = ">=3.13"

dependencies = [
    "requests",
    "pydantic",
    "typer",
    "openai"
]

[build-system]
requires = [
    "setuptools>=65",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-random-order",
    "pytest-vcr",
    "pytest-watch",
    "ruff",
]

[project.scripts]
cook = "cook_upload:main"


